# for display continuity sake please use 2 spaces instead of tabs

2015-05-10 mmichaud <m.michael.michaud@orange.fr>
  * Repair and improve SaveViewAsBeanTool

2015-05-07 mmichaud <m.michael.michaud@orange.fr>
  * Fix a horrible bug in Buffer plugin (attributes were not preserved)

2015-05-04 ede
  oj_linux.sh
  * fix Gentoo java version '' insufficient bug
  http://sourceforge.net/p/jump-pilot/feature-requests/221
  * java version check now more robust, warns only if version 
    cannot be detected properly
  * follow links to oj_linux.sh now indefinitely
  * resolve JUMP_HOME now without . and ..

2015-04-12 Giuseppe Aruta <giuseppe_aruta@yahoo.it>
  * Raster Color Editor Panel. Added an option to invert color range and an option to set
    values outside choosen range to transparent. Optimized color ramp. Added more color ramps

2015-04-18 mmichaud <m.michael.michaud@orange.fr>
  * FR #220 : add an option to snap on feature being edited. Indeed, the new snap
    policy is applied on LineString edition only as snapping on a polygon being
    edited tends to create invalid polygons

2015-04-12 Giuseppe Aruta (ma15569)
  * Reworked dialog for rasterimage layers with no georeference info. Now images are opened
    into the view, by default, with original file width/height proportion. Option to warp
    image into the view

2015-04-11 mmichaud <m.michael.michaud@orange.fr>
  * fix #396 on ShapefileReader so that it can read shapefile from shx as
    other GIS software do (committed in r4395)

2015-04-07 bertaz
  * fix #391: Regression on RasterImageLayer about alpha channel
  * fix #392: Color transparency option on RasterImageLayer.class doesn't work

2015-04-06 mmichaud <m.michael.michaud@orange.fr>
  * fix #393 : simple query plugin did not do a deep copy of features
    improve boolean handling in simple query plugin
  * fix #394 : bad geometries produced by CutPolygon Cursor tool

2015-04-05 ede
  * PLUS: update kml driver to 0.2.4